--- a/IJAC/loc-diff-terms-ijac.tex
+++ b/IJAC/loc-diff-terms-ijac.tex
@@ -1630,9 +1630,28 @@ $S$.
 \begin{proof}
   The proof is by induction on the length, $|S|$, of the sequence.  In the base
   case, $|S| = 3$, the claim is true by assumption.
-  Fix $n\geq 3$ and let $\sigma = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
+  Fix $n\geq 3$ and assume the claim holds for all sequences of length
+  $3\leq k\leq n$.
+  We prove the claim holds for an arbitrary length-$(n+1)$ sequence, 
+  $\sigma = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
+  Since $|\sigma|>3$, there exists $i \neq j$ such that $\chi_i = \chi_j$.
+  Assume without loss of generality that $j=0$.
+  Let $\sigma' = ((a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$, which
+  has a local minimal term by the induction hypothesis.
 
-  LEFT OFF HERE
+  Without loss of generality, suppose $\chi_0=0$, and $\chi_1 = \chi_2 =\cdots =\chi_k = 1$,
+  and $\chi_{k+1} = \chi_{k+2} = \cdots = \chi_{n} = 1$.\\
+  \\
+  LEFT OFF HERE (TODO: complete this proof!)\\
+  \\
+  \underline{Case $\chi_0 = 0$:}\\
+  \\
+  \underline{Case $\chi_0 = 1$:}\\
+  \\
+  \underline{Case $\chi_0 = 2$:} 
+  
+  %% \[
+  %% T = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
   
 \end{proof}
 
