--- a/IJAC/inputs/macros.sty
+++ b/IJAC/inputs/macros.sty
@@ -112,6 +112,7 @@
 \newcommand{\sA}{\ensuremath{\mathcal{A}}}
 \newcommand{\sV}{\ensuremath{\mathcal{V}}}
 \newcommand{\sB}{\ensuremath{\mathcal{B}}}
+\newcommand{\sU}{\ensuremath{\mathcal{U}}}
 \newcommand{\sS}{\ensuremath{\mathcal{S}}}
 \newcommand{\cC}{\ensuremath{\mathcal{C}}}
 \newcommand{\cS}{\ensuremath{\mathcal{S}}}
