--- a/IJAC/loc-diff-terms-ijac.tex
+++ b/IJAC/loc-diff-terms-ijac.tex
@@ -486,22 +486,27 @@ MRREVIEWER = {Ivan Chajda},
 %%%CLIFF'S STUFF
 %% For debugging we want to turn a few facilitites on
 %For marginal notes. 
-\usepackage{pifont}
-\usepackage{bm}
-\newcommand\mpar[1]{\mbox{}\marginpar{\raggedright\hspace{0pt}\small #1}}
-%\newcommand\mpar[1]{\relax} %uncomment to turn off marginal notes
-\newcommand{\towjd}[1]{\par \noindent \mpar{\ding{'120}}{{\bf chb:} \emph{#1}}\par}
-\newcommand{\tochb}[1]{\par \noindent \mpar{\ding{'121}}{{\bf wjd:} \emph{#1}}\par}
-\let\:\colon
-\newcommand{\card}[1]{|#1|}
-\DeclareMathOperator{\size}{size}
-\newcommand{\sansV}{\ensuremath{\mathsf{V}}}
-\newcommand{\Sl}{\ensuremath{Sl}} %I don't know what font to use
-\newcommand{\Sq}[1]{\ensuremath{\mathbf{Sq}_{#1}}}
-\newcommand{\sdm}{\sd-\meet\xspace}
-\newcommand{\casespec}[1]{\medskip\noindent\textbf{#1}.\enspace}
-%:Cliff's macs
+%% \usepackage{pifont}
+%% \usepackage{bm}
+%% \newcommand\mpar[1]{\mbox{}\marginpar{\raggedright\hspace{0pt}\small #1}}
+%% %\newcommand\mpar[1]{\relax} %uncomment to turn off marginal notes
+%% \newcommand{\towjd}[1]{\par \noindent \mpar{\ding{'120}}{{\bf chb:} \emph{#1}}\par}
+%% \newcommand{\tochb}[1]{\par \noindent \mpar{\ding{'121}}{{\bf wjd:} \emph{#1}}\par}
+%% \let\:\colon
+%% \newcommand{\card}[1]{|#1|}
+%% \DeclareMathOperator{\size}{size}
+%% \newcommand{\sansV}{\ensuremath{\mathsf{V}}}
+%% \newcommand{\Sl}{\ensuremath{Sl}} %I don't know what font to use
+%% \newcommand{\Sq}[1]{\ensuremath{\mathbf{Sq}_{#1}}}
+%% \newcommand{\sdm}{\sd-\meet\xspace}
+%% \newcommand{\casespec}[1]{\medskip\noindent\textbf{#1}.\enspace}
+%% %:Cliff's macs
 %%% END OF CLIFF'S STUFF
+
+
+%% \newcommand{\glocal}{global-local}
+\newcommand{\glocal}{glocal\xspace}
+%% This is a weird name, I know... but maybe we can pull it off.
 
 %%% For pseudocode
 \usepackage{algorithm}
@@ -1331,63 +1336,83 @@ More details on the complexity of operations carried out by the algorithm, as we
 \section{Global-local difference terms}
 \label{sec:glob-local-diff}
 The methods from the previous section can be lifted
-up to subuniverses, as we now describe.
+up to universes, as we now describe.
 Let $\sV$ be a variety, let $\bA = \<A, \dots\> \in \sV$ 
 and $i\in \{0,1\}$.
-We call a term $d$ a \defn{global-local difference term for $(A, i)$}
+We call a term $d$ a \defn{global-local (or ``glocal'') difference term
+for $(A, i)$}
 provided for all $a, b\in A$  we have
 \begin{align}
 \text{ if $i=0$, then } & a \comm{\theta(a,b)}{\theta(a,b)} d^{\bA}(a,b,b);
 \label{eq:global-diff-triple}\\
 \text{ if $i=1$, then } &
-d(a,a,b) = b. 
+d^{\bA}(a,a,b) = b. 
 \end{align}
-Let $\Sub(\bA)$ denote the set of all
-subuniverses of $\bA$. In the next theorem we will use some new notation and terminology.
-Let $\sS(\bA):= \Sub(\bA) \times \{0,1\}$. For
-\[S = ((A_0, \chi_0), (A_1, \chi_1), \dots,
-(A_{n-1},\chi_{n-1})) \in \sS(\bA)^n,
+
+Let $\sV$ be a variety and let $\sA$ be a collection of algebras that belong to $\sV$.
+Let $\sU(\sA)$ be the collection of all pairs $(A, i)$ where $A$ is the universe
+of some algebra in $\sA$ and $i\in \{0,1\}$.  That is,
+\[
+\sU(\sA) = \{(A, i) \mid \<A, \dots\> \in \sA \text{ and } i \in \{0,1\}\}.
 \]
-we call a term $d$ a \defn{global-local difference term for $S$}
-if $d$ is a global-local difference term for every  $(A_i, \chi_i) \in S$.
-Throughout this section we use $|S|$ to denote the \emph{length of the
-sequence $S$}.
+Given a sequence
+\[S = ((A_0, \chi_0), (A_1, \chi_1), \dots,
+(A_{n-1},\chi_{n-1})) \in \sU(\sA)^n,
+\]
+(or a subset $S \subseteq \sU(\sA)$),
+a term $d$ is called a \defn{\glocal difference term for $S$}
+if it is a \glocal difference term for every element $(A_i, \chi_i)$ of $S$.
+Besides these definitions, in the proof of the next theorem we use
+$|S|$ to denote the \emph{length of the sequence $S$}.
 
 \begin{thm}
   \label{thm:glob-loc-diff-terms}
-  Let $\sV$ be an idempotent variety and
-  $\bA \in \sV$. 
-  If every pair
-  $((A, i), (B, j)) \in \sS(\bA) \times \sS(\bA)$
-  has a global-local difference term,
-  then, for all $n\geq 2$, every sequence $S \in \sS(\bA)^n$
-  has a global-local difference term.
+  Let $\sV$ be a variety.  Let $\sA$ be a collection of finite idempotent
+  algebras in $\sV$. Fix $n\geq 2$ and 
+  let $S= ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n-1}, \chi_{n-1}))\in \sU(\sA)^n$.
+  Then there exists a term that is a \glocal difference term for $S$
+  if and only if each 2-element subsequence $((A_i,\chi_i), (A_j,\chi_j))$ of $S$
+  has a \glocal difference term.
 \end{thm}
 \begin{proof}
-The proof is by induction on $|S|$, the length of the sequence
-$S$.
-In the base case, $|S| = 2$, the claim holds by assumption.
-Fix $n\geq 2$ and assume that every sequence in $\sS(\bA)^k$ of length $2\leq k \leq n$ has
-a global-local difference term. Let
-$S = ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n},\chi_{n})) \in \sS(\bA)^{n+1}$.
-%% so that $|S| = n+1$.  
-We will prove that $S$ has a global-local difference term.
+  One direction is clear; if $d$ is a \glocal difference term for every
+  element $(A_i, \chi_i)$ of $S$, then  every pair $((A_i,\chi_i),
+  (A_j,\chi_j))$ of elements of $S$ also has a \glocal difference
+  term---namely, $d$.
 
-Since $|S| \geq 3$ and $\chi_i \in \{0,1\}$ for all $i$, there must exist
-indices $i\neq j$ such that $\chi_i = \chi_j$. Assume without loss of generality
-that one of these indices is $j=0$.  Define the subsequence
-$S' = ((A_1, \chi_1), \dots,(A_{n},\chi_{n}))$ of $S$. %% \in \sS(\bA)^{n}$
-Since $|S'| = n$, the sequence $S'$ has a global-local difference term $p$.
-Thus, for all $1\leq i \leq n$,
-for all $a, b\in A_i$  we have
-\begin{align*}
-  \text{ if $\chi_i=0$, then } &
-  a \comm{\theta(a,b)}{\theta(a,b)} d(a,b,b);\\
-  \text{ if $\chi_i=1$, then } &
-  %% d^{\bB_i}(b,b,b') = b'.
-  d(a,a,b) = b.
-\end{align*}
-We split the remainder of the proof into two cases.
+  For the converse, suppose that
+  for each pair $((A_i,\chi_i), (A_j,\chi_j))$ of elements of $S$ there exists a
+  term $p_{ij}$ that is a \glocal difference term for both
+  $(A_i,\chi_i)$ and $(A_j,\chi_j)$.
+  We will prove by induction on the length of $S$ that
+  %% , for every $n\geq 2$ every subsequence $S \in \sU(\sA)^n$
+  there exists a term $d$ that is a \glocal difference term for every
+  $(A_i, \chi_i)$ in $S$.
+
+  In the base case, $n = |S| = 2$, the claim holds by assumption.
+  Fix $n\geq 2$ and assume for every
+  $2\leq k \leq n$ that every sequence in $\sU(\sA)^k$
+  has a \glocal difference term. Let
+  $S = ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n},\chi_{n})) \in \sU(\sA)^{n+1}$.
+  %% We prove there exists a term $d$ that is a \glocal difference term for every
+  %% $(A_i, \chi_i)$ in $S$.
+  We prove  $S$ has a \glocal difference term.
+
+  Since $|S| \geq 3$ and $\chi_i \in \{0,1\}$ for all $i$, there must exist
+  indices $i\neq j$ such that $\chi_i = \chi_j$. Assume without loss of generality
+  that one of these indices is $j=0$.  Define the subsequence
+  $S' = ((A_1, \chi_1), \dots,(A_{n},\chi_{n}))$ of $S$. %% \in \sU(\sA)^{n}$
+  Since $|S'| = n$, the sequence $S'$ has a \glocal difference term $p$.
+  Thus, for all $1\leq i \leq n$,
+  for all $a, b\in A_i$  we have
+  \begin{align*}
+    \text{ if $\chi_i=0$, then } &
+    a \comm{\theta(a,b)}{\theta(a,b)} d(a,b,b);\\
+    \text{ if $\chi_i=1$, then } &
+    %% d^{\bB_i}(b,b,b') = b'.
+    d(a,a,b) = b.
+  \end{align*}
+  We split the remainder of the proof into two cases.
 
 \vskip3mm
 
@@ -1405,18 +1430,18 @@ Define
 T = ((A_0, 0), (A_1, 1), (A_2, 1), \dots, (A_k, 1)).
 \]
 Note that $|T| < |S|$.
-Let $t$ be a global-local difference term for $T$.
+Let $t$ be a \glocal difference term for $T$.
 We will prove that the term $d(x,y,z) = t(x, p(x,y,y), p(x,y,z))$
-is a global-local difference term for the sequence $S$.
+is a \glocal difference term for $S$.
 
-The first triple in $S$ is $(A_0, 0)$, so we need to show for all $a$, $b \in A_0$
+The first element of $S$ is $(A_0, 0)$, so we need to show for all $a$, $b \in A_0$
 that
 \[
 d(a,b,b) \comm{\theta(a,b)}{\theta(a,b)} a.
 \]
 Fix $a, b \in A_0$.
 By definition of $d$, and since
-$t$ is a global-local difference term for $(A_0, 0)$, we have
+$t$ is a \glocal difference term for $(A_0, 0)$, we have
 \begin{equation}
   \label{eq:100100}
   d(a,b,b) 
@@ -1431,9 +1456,9 @@ This and~(\ref{eq:100100}) imply
 $d(a,b,b)\comm{\theta(a,b)}{\theta(a,b)} a$,
 as desired.
 
-For indices $1\leq i \leq k$ we have $\chi_i =1$, so we wish to prove
-that for all $a$, $b \in A_i$ we have
-$d(a,a,b) = b$.
+Next, consider the (possibly empty) set of indices $\{i \mid 1\leq i \leq k\}$.
+For such indices $\chi_i =1$, so we will prove
+for all $a$, $b \in A_i$ that $d(a,a,b) = b$.
 Fix $a, b \in A_i$ and observe that
 \begin{align}
   %% d^{\bB_i}(b,b,b') &=
@@ -1443,15 +1468,16 @@ Fix $a, b \in A_i$ and observe that
   &=b. \label{eq:230202}
 \end{align}
 Equation~(\ref{eq:210200}) holds by definition of $d$,~(\ref{eq:220201})
-because $p$ is an idempotent global-local difference term for
-$S'$, and~(\ref{eq:230202}) because $t$ is a global-local difference term for $T$.
+because $p$ is an idempotent \glocal difference term for
+$S'$, and~(\ref{eq:230202}) because $t$ is a \glocal difference term for $T$.
 
-The remaining triples in our original sequence $S$
-have indices satisfying $k<j\leq n$ and $\chi_j = 0$.
-Thus, for these triples we prove
-for all $a, b \in A_j$ that
+The indices of the remaining elements of $S$
+belong to the set $\{j \mid k<j\leq n\}$ (which is nonempty since we
+assumed $\chi_0 = \chi_i = 0$ for some $i>0$).
+For such indices we have $\chi_j = 0$.
+Thus, fixing $a, b \in A_j$, we check that
 $d(a,b,b)\comm{\theta(a,b)}{\theta(a,b)} a$.
-Fix $a, b \in A_j$.
+%% Fix $a, b \in A_j$. 
 By definition,
 \begin{equation}
   \label{eq:451}
@@ -1459,7 +1485,7 @@ By definition,
 d(a,b,b) =t(a, p(a,b,b), p(a,b,b)).  
 \end{equation}
 Also, $p(a,b,b) \comm{\theta(a,b)}{\theta(a,b)} a$,
-since $p$ is a global-local difference term for $S'$.
+since $p$ is a \glocal difference term for $S'$.
 %% $(p(a,b,b), a)\in [\theta(a,b), \theta(a,b)]$.
 This and (\ref{eq:451}) imply
 that
@@ -1479,19 +1505,20 @@ Define
 \[
 T = ((A_0, 1), (A_1, 0), (A_2, 0), \dots, (A_k, 0)).
 \]
-and note that $|T| < |S|$, so $T$ has a global-local difference term $t$.
+and note that $|T| < |S|$, so $T$ has a \glocal difference term $t$.
 We will prove that the term $d(x,y,z) = t(p(x,y,z), p(y,y,z), z)$
-is a global-local difference term for the  sequence $S$.
+is a \glocal difference term for $S$.
 
 The first pair in $S$ is $(A_0, 1)$, so we want to show for all $a$, $b \in A_0$ that
 $d(a,a,b) = b$.
 Fix $a$, $b \in A_0$. By definition of $d$,
 we have $d(a,a,b) = t(p(a,a,b), p(a,a,b), b) =b$.
-The last equality holds since $t$ is a global-local difference term for $T$, in particular,
+The last equality holds since $t$ is a \glocal difference term for $T$, in particular,
 for $(A_0, 1)$.
 
-If $1\leq i \leq k$, then $\chi_i =0$, so for these indices we want
-for all $a, b \in A_i$ that
+Next, consider the (possibly empty) set of indices $\{i \mid 1\leq i \leq k\}$.
+For such indices $\chi_i =0$, so we will prove
+for all $a$, $b \in A_i$ that
 \[
 d(a,b,b) \comm{\theta(a,b)}{\theta(a,b)} a.
 \]
@@ -1502,14 +1529,15 @@ By definition of $d$ and idempotence of $p$, we have
   t(p(a,b,b), p(b,b,b), b)   \label{eq:444}\\
   &=t(p(a,b,b), b, b). \nonumber
 \end{align}
-Next, since $p$ is a global-local difference term for $S'$, we have
+Next, since $p$ is a \glocal difference term for $S'$,
+hence for $(A_i, 0)$, we have
 \begin{equation}
   \label{eq:555}
   t(p(a,b,b), b, b)
  \comm{\theta(a,b)}{\theta(a,b)}
  t(a, b, b).
 \end{equation}
-Finally, since $t$ is a global-local difference term for $T$, hence for
+Finally, since $t$ is a \glocal difference term for $T$, hence for
 $(A_i, 0)$,  %% $(1\leq i \leq k)$,
 we have 
 \[
@@ -1519,57 +1547,48 @@ Combining this with (\ref{eq:444}) and (\ref{eq:555}) yields
 $d(a,b,b) \comm{\theta(a,b)}{\theta(a,b)} a$,
 as desired.
 
-The remaining elements of our original sequence $S$
-have indices $j$ satisfying $k<j\leq n$ and $\chi_j = 1$.
-For these we want to prove for all $a, b\in a_j$ that $d(a,a,b) = b$.
-Fix $a, b\in a_j$. Since $p$ is a global-local difference term for $S'$, we have
-$p(a,a,b) = b$, and this along with idempotence of $t$ yields
-\[
-d(a,a,b) =
-t(p(a,a,b), p(a,a,b), b)
-=t(b, b, b) =b\]
-as desired.
+The indices of the remaining elements of $S$
+belong to the set $\{j \mid k<j\leq n\}$ (which is nonempty since we
+assumed $\chi_0 = \chi_i = 1$ for some $i>0$).
+For such indices we have $\chi_j = 1$.
+Thus, fixing $a, b \in A_j$, we check that $d(a,a,b) = b$.
+Indeed, $p(a,a,b) = b$, since $p$ is a \glocal difference term for $S'$; 
+this, along with idempotence of $t$, yields
+$d(a,a,b) =t(p(a,a,b), p(a,a,b), b)=t(b, b, b) =b$.
 \end{proof}
 
-If $\sA$ be a collection of similar algebras. Let %% , we will use the notation
-%% $\Sub(\sA)$ to denote the collection of all subuniverses of all algebras in
-%% $\sA$.
-%% That is,
-%% \[\Sub(\sA) = \bigcup_{\bA \in \sA} \Sub(\bA).\]
-%% By further abuse of notation, we let
-%% \[\sS(\sA) =\Sub(\sA) \times \{0,1\},\]
-%% so $(A, i)\in \sS(\sA)$ indicates that
-%% $A$ is a subuniverse of some algebra in $\sA$,and $i\in \{0,1\}$.
+
+Recall, if $\sA$ is a collection of algebras belonging to a variety $\sV$,
+we let
 \[
-\sS(\sA) =\sA \times \{0,1\},
+\sU(\sA) = \{(A, i) \mid \<A, \dots\> \in \sA \text{ and } i \in
+\{0,1\}\}.
 \]
-so $(A, i)\in \sS(\sA)$ indicates that
-$A \in \sA$ and $i\in \{0,1\}$.
 \begin{cor}
   \label{cor:glob-loc-diff-term}
   Let $\sV$ be a variety.  Let $\sA$ be a collection of finite idempotent
   algebras in $\sV$. %% that is closed under the taking of subalgebras.
-  Then there exists a term $d$ that is a difference term operation for every
-  %% subalgebra of every algebra in $\sA$
-  algebra in $\sA$
-  if and only if each pair $((A,i), (B,j)) \in \sS(\sA)^2$ has a global-local
+  Then there exists a term $d$ that interprets as a difference term operation
+  in every algebra in $\sA$
+  if and only if each pair $((A,i), (B,j)) \in \sU(\sA)^2$ has a \glocal
   difference term.
 \end{cor}
 \begin{proof}
-  One direction is clear, since a difference term for all of $\sA$ is
-  obviously a global-local difference term for the whole set $\sS(\sA)$.
+  One direction is clear, since a term that is a difference term operation for
+  every $\bA \in \sA$ is obviously a \glocal difference term for
+  every $(A, i) \in \sU(\sA)$.
   For the converse, suppose
-  each pair in $\sS(\sA)^2$ has a global-local
+  each pair in $\sU(\sA)^2$ has a \glocal
   difference term. Then, by Theorem~\ref{thm:glob-loc-diff-terms},
-  there is a single global-local difference term for the whole set
-  $\sS(\sA)$
-  and this is a difference term for every algebra in $\sA$.
-  To see this, let $d$ be a global-local difference term for $\sS(\sA)$ and fix
-  $\bA \in \sA$.  Then $d$ is a difference term operation for $\bA$.  Indeed,
-  if $a, a' \in A$ we have $a \comm{\Cg(a,a')}{\Cg(a,a')} d(a,a',a')$,
-  since $d$ is a global-local difference term for $(A,0)$,
-  and we have $d(a,a,a') = a'$, since $d$ is a global-local difference term for $(A,1)$.
-  %% Since $a, a'$ were arbitrary elements of $A$, we conclude that
+  there is a single term $d$ that is a \glocal difference term for every 
+  $(A, i) \in \sU(\sA)$, 
+  and therefore $d$ interprets as a difference term operation in every $\bA \in \sA$.
+  To see this, choose an arbitrary $\bA = \<A, \dots\> \in \sA$ and fix $a, b \in A$. 
+  Then $a \comm{\Cg(a,b)}{\Cg(a,b)} d^{\bA}(a,b,b)$,
+  since $d$ is a \glocal difference term for $(A,0)$,
+  and $d^{\bA}(a,a,b) = b$, since $d$ is a \glocal
+  difference term for $(A,1)$. 
+  %% Since $a, b$ were arbitrary elements of $A$, we conclude that
   %% $d$ is a difference term operation for $\bA$.
 \end{proof}
 
@@ -1589,16 +1608,17 @@ $A \in \sA$ and $i\in \{0,1\}$.
   $\sV$ generated by $x$ and $y$.
   We can assume $\bF$ is a subdirect product of
   $\bA_0 \times \bA_1 \times \cdots \times \bA_{n-1}$, where $n\leq |A|^2$.
-  Let $\sA = \{A_0, A_1, \dots, A_{n-1}\}$ and $\sS(\sA) = \sA \times \{0,1\}$.
+  Let $\sA = \{A_0, A_1, \dots, A_{n-1}\}$ and (as above) let $\sU(\sA)$ denote 
+  all pairs $(A, i)$ such that $\bA = \<A, \dots\> \in \sA$ and $i\in \{0,1\}$.
   We first check that each of the
   %% $\binom{n}{2}$
   %% $\begin{pmatrix} n \\ 2 \end{pmatrix}$
-  $n^2$ pairs
-  $((A_i, \chi_i), (A_j, \chi_j)) \in (\sS \times \{0,1\})^2$ has a global-local
+  $n^2$ pairs 
+  $((A_i, \chi_i), (A_j, \chi_j)) \in \sU(\sA)^2$ has a \glocal
   difference term.
 \end{proof}
 
-\section{Local and global-local minority terms}
+\section{Local and \glocal minority terms}
 Let $\sV$ be a variety.  A term $m$ in the language of $\sV$
 is called a \defn{minority term} if for every $\bA \in \sV$ and
 all $a, b \in A$ it is the case that 
@@ -1621,14 +1641,14 @@ We call $t$ a
 ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n-1}, b_{n-1}, \chi_{n-1}))
 \in (A\times A \times \{0,1,2\})^n\]
 provided it is a local minority term for each triple in the sequence.
-We call $t$ a \defn{global-local minority term} for 
+We call $t$ a \defn{\glocal minority term} for 
 $(A,i)$ provided conditions~(\ref{eq:2}),~(\ref{eq:4}), and~(\ref{eq:5}) hold
 for all $a, b \in A$.
 If $\sA$ is a collection of algebras in $\sV$, and if
 $S = ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n-1}, \chi_{n-1}))$
 is a sequence of pairs $(A_i, \chi_i) \in \sA \times \{0,1,2\}$, then
-we call $t$ a \defn{global-local minority term for $S$} if it is a
-global-local minority term for every $(A_i, \chi_i)$ in the sequence
+we call $t$ a \defn{\glocal minority term for $S$} if it is a
+\glocal minority term for every $(A_i, \chi_i)$ in the sequence
 $S$.
 
 \begin{thm}
