--- a/IJAC/inputs/macros.sty
+++ b/IJAC/inputs/macros.sty
@@ -110,10 +110,12 @@
 \newcommand{\uthree}{\ensuremath{\underline{3}}}
 
 \newcommand{\sA}{\ensuremath{\mathcal{A}}}
+\newcommand{\scA}{\ensuremath{\mathscr{A}}}
 \newcommand{\sV}{\ensuremath{\mathcal{V}}}
 \newcommand{\sB}{\ensuremath{\mathcal{B}}}
 \newcommand{\sU}{\ensuremath{\mathcal{U}}}
 \newcommand{\sS}{\ensuremath{\mathcal{S}}}
+\newcommand{\scS}{\ensuremath{\mathscr{S}}}
 \newcommand{\cC}{\ensuremath{\mathcal{C}}}
 \newcommand{\cS}{\ensuremath{\mathcal{S}}}
 \newcommand{\sC}{\ensuremath{\mathcal{C}}}
