--- a/IJAC/loc-diff-terms-ijac.tex
+++ b/IJAC/loc-diff-terms-ijac.tex
@@ -1405,7 +1405,7 @@ it is inconsequential.
   $\sU  = (A_0^2 \times \{0,1\}) + (A_1^2\times \{0,1\})$
   and suppose that every pair
   $(\<(a, b, \chi), i\>, \<(a', b', \chi'), i'\>) \in \sU^2$
-  has a local difference term. Then every subset $S \subseteq \sU$,
+  has a local difference term. Then every tuple $S \subseteq \sU^n$
   has a local difference term.
 \end{thm}
 
@@ -1556,130 +1556,6 @@ is nearly identical to the one used to prove Theorem~\ref{thm:local-diff-terms}.
 
 \draftsecskip
 
-\section{Local minority terms}
-Let $\sV$ be a variety.  A term $m$ in the language of $\sV$
-is called a \defn{minority term} if for every $\bA \in \sV$ and
-all $a, b \in A$ it is the case that 
-\[
-m(a,b,b) =m(b,a,b) = m(b,b,a) = a.
-\]
-%% Let $\bA = \<A, \dots\>$ be an algebra in a variety $\sV$, let $t$ be a term
-%% of $\sV$.
-If $t$ is a term of $\sV$ and $\bA = \<A, \dots\>$ an algebra in $\sV$, 
-then we call $t$ a \defn{local minority term} for the triple
-$(a,b,i) \in A\times A \times \{0,1,2\}$ provided
-\begin{align}
-\text{ if $i=0$, then } & t(a, b, b)= a\label{eq:2}\\
-\text{ if $i=1$, then } & t(b,a,b) = a\label{eq:4}\\
-\text{ if $i=2$, then } & t(b,b,a) = a\label{eq:5}. 
-\end{align}
-We call $t$ a
-\defn{local minority term} for the sequence
-\[
-((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n-1}, b_{n-1}, \chi_{n-1}))
-\in (A\times A \times \{0,1,2\})^n\]
-provided it is a local minority term for each triple in the sequence.
-We call $t$ a \defn{\glocal minority term} for 
-$(A,i)$ provided conditions~(\ref{eq:2}),~(\ref{eq:4}), and~(\ref{eq:5}) hold
-for all $a, b \in A$.
-If $\scA$ is a collection of algebras in $\sV$, and if
-$S = ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n-1}, \chi_{n-1}))$
-is a sequence of pairs $(A_i, \chi_i) \in \scA \times \{0,1,2\}$, then
-we call $t$ a \defn{\glocal minority term for $S$} if it is a
-\glocal minority term for every $(A_i, \chi_i)$ in the sequence
-$S$.
-
-\begin{thm}
-  Let $n\geq 3$ and let
-  $S  = ((a_0, b_0, \chi_0), \dots, (a_{n-1}, b_{n-1}, \chi_{n-1}))
-  \in (A\times A \times \{0,1,2\})^n$.
-  Suppose for all
-  $0\leq i, j, k <n$ that the subsequence 
-  $((a_i, b_i, \chi_i), (a_j, b_j, \chi_j), (a_k, b_k, \chi_k))$ of $S$ 
-  has a local minority term.  Then $S$ has a local minority term.
-\end{thm}
-\begin{proof}
-  The proof is by induction on the length, $|S|$, of the sequence.  In the base
-  case, $|S| = 3$, the claim is true by assumption.
-  Fix $n\geq 3$ and assume the claim holds for all sequences of length
-  $3\leq k\leq n$.
-  We prove the claim holds for an arbitrary length-$(n+1)$ sequence, 
-  $S = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
-  Since $|S|>3$, there exists $i \neq j$ such that $\chi_i = \chi_j$.
-  Assume without loss of generality that $j=0$.
-  Let $\sigma' = ((a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$, which
-  has a local minority term $p$ by the induction hypothesis.
-
-  We split the remainder of the proof into two cases.
-
-  \vskip3mm
-
-  %--------------------------------------
-  \noindent \underline{Case $\chi_0 = 0$:}
-  Without loss of generality, suppose for some $1\leq k \leq j < n$ that
-  $\chi_1 =  \cdots =\chi_k = 1$,
-  $\chi_{k+1}  = \cdots = \chi_{j} = 2$, and
-  $\chi_{j+1} = \cdots = \chi_{n} = 0$.
-  Define
-  $T = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_j, b_j, \chi_j))$.
-  %% T = ((A_0 \chi_0), (A_1, \chi_1), (A_2, \chi_2), \dots, (A_j, \chi_j)).
-  Note that $|T| < |S|$, so $T$ has a local minority term $t$.
-  Define
-  %%%%%%%%%
-                $m(x,y,z) = t(x, p(x,y,y), p(x,y,z))$.
-  %%%%%%%%%
-  We will prove that $m$ is a local minority term for $S$.
-
-  %% The first triple in $S$ is $(a_0, b_0, 0)$, so we prove for all $a$, $b \in A_0$
-  The first triple in $S$ is $(a_0, b_0, 0)$, so we first check that
-  $m(a_0,b_0,b_0)= a_0$. Indeed,
-  \[
-  m(a_0,b_0,b_0) = t(a_0, p(a_0, b_0, b_0), p(a_0, b_0, b_0)) = a_0.
-  \]
-  The second equality holds because $t$ is a local minority term for $T$.
-
-  %%------
-  For indices in the (possibly empty) set $\{i \mid 0 < i \leq k\}$, we have
-  $\chi_i = 1$, so we check that $m(b_i, a_i, b_i) = a_i$, as follows:
-  \[
-  m(b_i,a_i,b_i) = t(b_i, p(b_i, a_i, a_i), p(b_i, a_i, b_i)) = t(b_i, b_i, a_i)
-  = a_i.
-  \]
-  The second equality holds because $p$ is a local minority term for $S'$, the
-  third holds because $t$ is a local minority term for $T$.
-
-  %%------
-  Next for indices in the (possibly empty) set $\{i \mid k< i \leq j\}$, we have
-  $\chi_i = 2$, so we check that $m(b_i, b_i, a_i) = a_i$.  Indeed,
-  \[
-  m(b_i,b_i,a_i) = t(b_i, p(b_i, b_i, b_i), p(b_i, b_i, a_i)) = t(b_i, b_i, a_i)
-  = a_i.
-  \]
-  The second equality holds by idempotence and because $p$ is a
-  local minority term for $S'$; the third equality holds since $t$ is a local minority
-  term for $T$.
-
-  Finally, we consider indices in the set $\{i \mid j< i \leq n\}$, which we know is
-  nonempty since we assumed $\chi_i = \chi_0 = 0$ for some $i>0$.
-  For such indices, $\chi_i=0$ so we check that
-  $m(a_i,b_i,b_i)= a_0$, as follows:
-  \[
-  m(a_i,b_i,b_i) = t(a_i, p(a_i, b_i, b_i), p(a_i, b_i, b_i)) =
-   t(a_i, a_i, a_i) =a_i.
-  \]
-  The second equality holds since $p$ is a local minority term for $S'$,
-  and the last equality holds by idempotence.
-  \\
-  \underline{Case $\chi_0 = 1$:}\\
-  \\
-  \underline{Case $\chi_0 = 2$:} 
-  
-  %% \[
-  %% T = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
-  
-\end{proof}
-
-\draftsecskip
 
 \appendix
 \section{Proofs}
@@ -1910,6 +1786,156 @@ Foundation under Grant No. 1500235.
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%%% I'M NOT SURE WHETHER LOCAL MINORITY TERMS REALLY WORK %%%
+
+\section{Local minority terms}
+Let $\sV$ be a variety.  A term $m$ in the language of $\sV$
+is called a \defn{minority term} if for every $\bA \in \sV$ and
+all $a, b \in A$ it is the case that 
+\[
+m(a,b,b) =m(b,a,b) = m(b,b,a) = a.
+\]
+%% Let $\bA = \<A, \dots\>$ be an algebra in a variety $\sV$, let $t$ be a term
+%% of $\sV$.
+If $t$ is a term of $\sV$ and $\bA = \<A, \dots\>$ an algebra in $\sV$, 
+then we call $t$ a \defn{local minority term} for the triple
+$(a,b,i) \in A\times A \times \{0,1,2\}$ provided
+\begin{align}
+\text{ if $i=0$, then } & t(a, b, b)= a\label{eq:2}\\
+\text{ if $i=1$, then } & t(b,a,b) = a\label{eq:4}\\
+\text{ if $i=2$, then } & t(b,b,a) = a\label{eq:5}. 
+\end{align}
+We call $t$ a
+\defn{local minority term} for the sequence
+\[
+((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n-1}, b_{n-1}, \chi_{n-1}))
+\in (A\times A \times \{0,1,2\})^n\]
+provided it is a local minority term for each triple in the sequence.
+We call $t$ a \defn{\glocal minority term} for 
+$(A,i)$ provided conditions~(\ref{eq:2}),~(\ref{eq:4}), and~(\ref{eq:5}) hold
+for all $a, b \in A$.
+If $\scA$ is a collection of algebras in $\sV$, and if
+$S = ((A_0, \chi_0), (A_1, \chi_1), \dots, (A_{n-1}, \chi_{n-1}))$
+is a sequence of pairs $(A_i, \chi_i) \in \scA \times \{0,1,2\}$, then
+we call $t$ a \defn{\glocal minority term for $S$} if it is a
+\glocal minority term for every $(A_i, \chi_i)$ in the sequence
+$S$.
+
+\begin{thm}
+  Let $n\geq 3$ and let
+  $S  = ((a_0, b_0, \chi_0), \dots, (a_{n-1}, b_{n-1}, \chi_{n-1}))
+  \in (A\times A \times \{0,1,2\})^n$.
+  Suppose for all
+  $0\leq i, j, k <n$ that the subsequence 
+  $((a_i, b_i, \chi_i), (a_j, b_j, \chi_j), (a_k, b_k, \chi_k))$ of $S$ 
+  has a local minority term.  Then $S$ has a local minority term.
+\end{thm}
+\begin{proof}
+  The proof is by induction on the length, $|S|$, of the sequence.  In the base
+  case, $|S| = 3$, the claim is true by assumption.
+  Fix $n\geq 3$ and assume the claim holds for all sequences of length
+  $3\leq k\leq n$.
+  We prove the claim holds for an arbitrary length-$(n+1)$ sequence, 
+  $S = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
+  Since $|S|>3$, there exists $i \neq j$ such that $\chi_i = \chi_j$.
+  Assume without loss of generality that $j=0$.
+  Let $\sigma' = ((a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$, which
+  has a local minority term $p$ by the induction hypothesis.
+
+  We split the remainder of the proof into two cases.
+
+  \vskip3mm
+
+  %--------------------------------------
+  \noindent \underline{Case $\chi_0 = 0$:}
+  Without loss of generality, suppose for some $1\leq k \leq j < n$ that
+  $\chi_1 =  \cdots =\chi_k = 1$,
+  $\chi_{k+1}  = \cdots = \chi_{j} = 2$, and
+  $\chi_{j+1} = \cdots = \chi_{n} = 0$.
+  Define
+  $T = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_j, b_j, \chi_j))$.
+  %% T = ((A_0 \chi_0), (A_1, \chi_1), (A_2, \chi_2), \dots, (A_j, \chi_j)).
+  Note that $|T| < |S|$, so $T$ has a local minority term $t$.
+  Define
+  %%%%%%%%%
+                $m(x,y,z) = t(x, p(x,y,y), p(x,y,z))$.
+  %%%%%%%%%
+  We will prove that $m$ is a local minority term for $S$.
+
+  %% The first triple in $S$ is $(a_0, b_0, 0)$, so we prove for all $a$, $b \in A_0$
+  The first triple in $S$ is $(a_0, b_0, 0)$, so we first check that
+  $m(a_0,b_0,b_0)= a_0$. Indeed,
+  \[
+  m(a_0,b_0,b_0) = t(a_0, p(a_0, b_0, b_0), p(a_0, b_0, b_0)) = a_0.
+  \]
+  The second equality holds because $t$ is a local minority term for $T$.
+
+  %%------
+  For indices in the (possibly empty) set $\{i \mid 0 < i \leq k\}$, we have
+  $\chi_i = 1$, so we check that $m(b_i, a_i, b_i) = a_i$, as follows:
+  \[
+  m(b_i,a_i,b_i) = t(b_i, p(b_i, a_i, a_i), p(b_i, a_i, b_i)) = t(b_i, b_i, a_i)
+  = a_i.
+  \]
+  The second equality holds because $p$ is a local minority term for $S'$, the
+  third holds because $t$ is a local minority term for $T$.
+
+  %%------
+  Next for indices in the (possibly empty) set $\{i \mid k< i \leq j\}$, we have
+  $\chi_i = 2$, so we check that $m(b_i, b_i, a_i) = a_i$.  Indeed,
+  \[
+  m(b_i,b_i,a_i) = t(b_i, p(b_i, b_i, b_i), p(b_i, b_i, a_i)) = t(b_i, b_i, a_i)
+  = a_i.
+  \]
+  The second equality holds by idempotence and because $p$ is a
+  local minority term for $S'$; the third equality holds since $t$ is a local minority
+  term for $T$.
+
+  Finally, we consider indices in the set $\{i \mid j< i \leq n\}$, which we know is
+  nonempty since we assumed $\chi_i = \chi_0 = 0$ for some $i>0$.
+  For such indices, $\chi_i=0$ so we check that
+  $m(a_i,b_i,b_i)= a_0$, as follows:
+  \[
+  m(a_i,b_i,b_i) = t(a_i, p(a_i, b_i, b_i), p(a_i, b_i, b_i)) =
+   t(a_i, a_i, a_i) =a_i.
+  \]
+  The second equality holds since $p$ is a local minority term for $S'$,
+  and the last equality holds by idempotence.
+  \\
+  \underline{Case $\chi_0 = 1$:}\\
+  \\
+  \underline{Case $\chi_0 = 2$:} 
+  
+  %% \[
+  %% T = ((a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n}, \chi_{n}))$.
+  
+\end{proof}
+
+\draftsecskip
 
 
 
