--- a/IJAC/loc-diff-terms-ijac.tex
+++ b/IJAC/loc-diff-terms-ijac.tex
@@ -1,7 +1,7 @@
-%% FILE: math_notes_template.tex
-%% AUTHOR: William DeMeo
-%% DATE: 25 July 2016
-%% COPYRIGHT: (C) 2016 William DeMeo,
+%% FILE: loc-diff-terms-ijac.tex
+%% AUTHOR: William DeMeo, Ralph Freese
+%% DATE: 1 Dec 2016
+%% COPYRIGHT: (C) 2016 William DeMeo 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                         BIBLIOGRAPHY FILE            %%
