--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -4,6 +4,7 @@
 \newcommand{\comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}}
 \newcommand{\com}[1]{\ensuremath{\lb #1 \rb}}
 \newcommand{\etaR}{\ensuremath{\tilde{\eta}}}
+\newcommand{\rhoR}{\ensuremath{\tilde{\rho}}}
 \newcommand{\hto}{\ensuremath{\rightharpoonup}}
 \newcommand{\bool}{\ensuremath{\mathtt{Bool}}}
 \newcommand{\true}{\ensuremath{\mathtt{true}}}
