--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -1,6 +1,6 @@
-%% FILE: math_notes_template.tex
+%% FILE: notes.tex
 %% AUTHOR: William DeMeo
-%% DATE: 25 July 2016
+%% DATE: 1 Dec 2016
 %% COPYRIGHT: (C) 2016 William DeMeo,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
