--- a/LICS/DeMeo_DiffTerms_LICS-2017.tex
+++ b/LICS/DeMeo_DiffTerms_LICS-2017.tex
@@ -1,3 +1,8 @@
+%% FILE: DeMeo_DiffTerms_LICS-2017.tex
+%% AUTHOR: William DeMeo
+%% DATE: 8 Jan 2017
+%% COPYRIGHT: (C) 2017 William DeMeo 
+
 %% \begin{filecontents*}{inputs/refs.bib}
 %% @article {MR3239624,
 %%     AUTHOR = {Valeriote, M. and Willard, R.},
